--- a/tethysapp/wqm/public/css/main.css
+++ b/tethysapp/wqm/public/css/main.css
@@ -205,3 +205,11 @@ div.dt-container .dt-search {
 .point-map-info table {
     margin-bottom: 8px;
 }
+
+
+.modal {
+    background-color: rgba(204,204,204,0.5);
+}
+.modal-backdrop {
+    display: none;
+}
