--- a/tethysapp/wqm/templates/wqm/components/settings/license.html
+++ b/tethysapp/wqm/templates/wqm/components/settings/license.html
@@ -121,9 +121,15 @@
 
             <div class="legend-item">
                 <div>
-                    <img src="{% static 'wqm/images/diem_quan_trac.png' %}" width="16" />
+                    <img src="{% static 'wqm/images/diem_quan_trac_0.png' %}" width="16" />
                 </div>
-                <span class="legend-text">Điểm quan trắc nước</span>
+                <span class="legend-text">Điểm quan trắc nước chưa hoạt động</span>
+            </div>
+            <div class="legend-item">
+                <div>
+                    <img src="{% static 'wqm/images/diem_quan_trac_1.png' %}" width="16" />
+                </div>
+                <span class="legend-text">Điểm quan trắc nước đang hoạt động</span>
             </div>
         </div>
     </div>
