--- a/tethysapp/wqm/public/css/pages/settings.css
+++ b/tethysapp/wqm/public/css/pages/settings.css
@@ -141,3 +141,67 @@
     font-size: 10px;
     border-radius: 0;
 }
+
+
+#content-box__config {
+    font-size: 14px;
+}
+
+.config-update-button-box {
+    display: flex;
+    justify-content: end;
+}
+
+.config-update-button-box .btn {
+    border-radius: 0px;
+    padding: 4px 12px;
+    font-size: 14px;
+}
+
+.circle-color {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    margin-right: 8px;
+}
+
+.td-color {
+    display: flex;
+    align-items: center;
+}
+
+.config-control {
+    border-bottom: 1px solid #f2f2f2;
+    padding-bottom: 16px;
+    margin-bottom: 16px;
+}
+
+#wqi-lookup-table, #params-table, #notify-table {
+    font-size: 12px;
+}
+
+#notify-table textarea {
+    width: 100%;
+    border: 1px solid #ccc;
+    padding: 4px;
+}
+
+
+.smtp-box__item {
+    display: flex;
+    margin-bottom: 16px;
+}
+
+.smtp-box__item label {
+    width: 10%;
+}
+
+.smtp-box__item input, .smtp-box__item textarea {
+    width: 90%;
+    max-width: 500px;
+    border-radius: 0;
+}
+
+.config-control__heading {
+    margin: 12px 0 16px 0;
+}
