--- a/tethysapp/wqm/templates/wqm/pages/dashboard.html
+++ b/tethysapp/wqm/templates/wqm/pages/dashboard.html
@@ -17,17 +17,63 @@
 
 <div class="content__main">
     <iframe class="dashboard-box" src="https://dashboard.mkdc.vn/superset/dashboard/p/wo4GgpRvPzX?standalone=3&show_filters=0" frameborder="0"></iframe>
-
     <div id="dashboard-map">
+       
         <div id="map" class="map"></div>
+
+        <div id="dashboard-point-map-info" class="point-map-info d-none">
+            <div class="point-map-info__nav">
+                <h6 id="dashboard-point-map-title"></h6>
+                <div id="dashboard-point-map-info__close-btn">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
+                        <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"/>
+                    </svg>
+                </div>
+            </div>
+
+            <table class="table table-bordered table-striped">
+                <tbody></tbody>
+            </table>
+
+            <div class="analysis-data">
+                
+            </div>
+        </div>
+
         <div class="legend">
-            <p class="mb-2"><b>Điểm khai thác nước</b></p>
+            <p class="mb-2"><b>Chú giải</b></p>
 
             <div class="legend-item">
                 <div>
                     <img src="{% static 'wqm/images/diem_khai_thac.png' %}" width="16" />
                 </div>
                 <span class="legend-text">Điểm khai thác nước</span>
+            </div>
+
+            <p class="mt-4 mb-2"><b>Điểm quan trắc</b></p>
+            <div class="legend-item">
+                <div class="tag-circle" style="background-color:#802323;"></div>
+                <span class="legend-text">Ô nhiễm nặng</span>
+            </div>
+            <div class="legend-item">
+                <div class="tag-circle" style="background-color:#fe0000;"></div>
+                <span class="legend-text">Kém</span>
+            </div>
+            <div class="legend-item">
+                <div class="tag-circle" style="background-color:#f4b083;"></div>
+                <span class="legend-text">Xấu</span>
+            </div>
+            <div class="legend-item">
+                <div class="tag-circle" style="background-color:#ffff00;"></div>
+                <span class="legend-text">Trung bình</span>
+            </div>
+            <div class="legend-item">
+                <div class="tag-circle" style="background-color:#00af50;"></div>
+                <span class="legend-text">Tốt</span>
+            </div>
+            <div class="legend-item">
+                <div class="tag-circle" style="background-color:#01b0f1;"></div>
+                <span class="legend-text">Rất tốt</span>
             </div>
         </div>
     </div>
@@ -42,6 +88,7 @@
 
 {% block scripts %}
 {{ block.super }}
+<script src="{% static 'wqm/vendors/chartjs@3.0.0/chart.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'wqm/js/pages/dashboard.js' %}" type="text/javascript"></script>
 
 {% endblock %}
