--- a/tethysapp/wqm/public/css/pages/dashboard.css
+++ b/tethysapp/wqm/public/css/pages/dashboard.css
@@ -49,3 +49,15 @@
     height: 100%;
     width: 70%;
 }
+
+.point-map-info__nav #dashboard-point-map-title {
+    margin: 0px;
+}
+
+#dashboard-point-map-info__close-btn {
+    padding: 8px;
+}
+
+#dashboard-point-map-info__close-btn:hover {
+    cursor: pointer;
+}
