--- a/tethysapp/wqm/templates/wqm/pages/settings.html
+++ b/tethysapp/wqm/templates/wqm/pages/settings.html
@@ -32,6 +32,10 @@
 
 {% block styles %}
 {{ block.super }}
+<link
+    rel="stylesheet"
+    href="https://www.unpkg.com/@mapbox/mapbox-gl-draw@1.4.3/dist/mapbox-gl-draw.css"
+/>
 <link href="{% static 'wqm/vendors/datatables@2.0.7/dataTables.css' %}" rel="stylesheet" />
 <link href="{% static 'wqm/css/pages/settings.css' %}" rel="stylesheet" />
 
@@ -41,6 +45,8 @@
 {{ block.super }}
 <script src="{% static 'wqm/vendors/datatables@2.0.7/dataTables.js' %}" type="text/javascript"></script>
 <script src="{% static 'wqm/vendors/chartjs@3.0.0/chart.min.js' %}" type="text/javascript"></script>
+<script src="https://www.unpkg.com/@mapbox/mapbox-gl-draw@1.4.3/dist/mapbox-gl-draw.js"></script>
+
 <script src="{% static 'wqm/js/components/settings/license.js' %}" type="text/javascript"></script>
 <script src="{% static 'wqm/js/components/settings/station.js' %}" type="text/javascript"></script>
 <script src="{% static 'wqm/js/components/settings/config.js' %}" type="text/javascript"></script>
