Cập nhật giao diện

--- a/tethysapp/wqm/templates/wqm/components/settings/config.html
+++ b/tethysapp/wqm/templates/wqm/components/settings/config.html
@@ -32,6 +32,11 @@
         <h6 class="config-control__heading"><b>Gửi thông báo</b></h6>
         <div class="config-control__content">
 
+            <select id="station-point-data-time-step" class="form-control" style="height: 32px; width: auto; border-radius: 0;">
+                <option value="30" selected>Thông báo tổng hợp chỉ số chất lượng nước </option>
+                <option value="90">Thông báo tổng hợp lưu lượng khai thác </option>
+            </select>
+
             <div class="mb-2" style="margin-top: 32px; padding: 24px 16px; border: 1px solid #ccc; position: relative; width: 640px;">
                 <div style="position: absolute; padding: 4px 12px; background-color: #fff; top: -16px;">
                     <p>Cấu hình email</p>
