Xử lý chart wqi

--- a/tethysapp/wqm/templates/wqm/components/settings/station.html
+++ b/tethysapp/wqm/templates/wqm/components/settings/station.html
@@ -290,7 +290,7 @@
                 <p class="mt-2 mb-2"><b>Điểm khai thác liên quan</b></p>
 
                 <ul id="ms-water-point" style=" width: 100%;border: 1px solid #ccc; border-radius: 0px; padding: 8px; margin: 0 0 16px 0; list-style-type: none;" data-popper-placement="bottom-start">
-                    <input type="text" style="height: 32px; border: 1px solid #ccc; width: 100%; border-radius: 0px; margin-bottom: 8px; padding: 4px;" placeholder="Tìm kiếm điểm khai thác nước" id="search-ms-water-point">
+                    <input type="text" style="height: 32px; border: 1px solid #ccc; width: 100%; border-radius: 0px; margin-bottom: 8px; padding: 4px;" placeholder="Tìm kiếm điểm khai thác nước" id="search-ms-water-point-modal">
                 
                 <li>
                     <div class="form-check">
