--- a/tethysapp/wqm/templates/wqm/pages/dashboard.html
+++ b/tethysapp/wqm/templates/wqm/pages/dashboard.html
@@ -5,7 +5,7 @@
 <div class="alert alert-warning">
     <div class="">
         <p class="alert__title">Bảng tổng quan</p>
-        <p class="alert__sub-title">Tần suất: 24h/lần (Cập nhật lần cuối lúc <span id="last-updated-time">07:00 21/07/2024</span>)</p>
+        <p class="alert__sub-title">Tần suất: 24h/lần (Cập nhật lần cuối lúc <span id="last-updated-time"></span>)</p>
     </div>
     <div>
         <button type="button" class="btn btn-success" id="sync-btn">
