Hiển thị biểu đồ lưu lượng khai thác

--- a/tethysapp/wqm/templates/wqm/components/settings/station.html
+++ b/tethysapp/wqm/templates/wqm/components/settings/station.html
@@ -140,12 +140,8 @@
                 <select id="ms-config" class="form-select" aria-label="Chọn cấu hình">
                     <option selected value="">Không cấu hình</option>
                 </select>
-                <p style="font-size: 10px; color: #6d6d6d; margin-top: 4px;">Lorem ipsum dolor sit amet consectetur
-                    adipisicing elit. Corporis ipsam ea repellendus exercitationem maxime voluptatibus esse quos iusto
-                    distinctio molestias in reiciendis perferendis fuga reprehenderit, nostrum, aperiam quod error quam!
-                </p>
+                <p style="font-size: 10px; color: #6d6d6d; margin-top: 4px;"></p>
             </div>
-
             <div id="table-params-config" class="d-none">
                 <p class="mb-2"><b>Bảng thông số theo cấu hình</b></p>
                 <div class="form-item">
